--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     Your browser does not support SVG.
   </object>
   <audio id="dx7audio" loop>
-    <source src="loop1_clean_loopable.mp3" type="audio/mpeg">
+    <source src="loop1_clean_loopable_slowed_30_percent.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
   <button onclick="toggleAudio()">🎛️ Toggle DX7 Sound</button>
