--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
  <h1>[ Hoffaha DX7 Chill Vibe Loader Control Plane v1.3.2 ]</h1>
-  <object type="image/svg+xml" data="dx7_patch_loader.svg" width="600" height="600">
+  <object type="image/svg+xml" data="dx7_patch_loader_looped_final.svg" width="600" height="600">
     Your browser does not support SVG.
   </object>
   <audio id="dx7audio" loop>
