--- a/index.html
+++ b/index.html
@@ -38,7 +38,60 @@
 
   <svg viewBox="0 0 280 60" xmlns="http://www.w3.org/2000/svg">
     <text x="40" y="37" font-size="18" font-family="monospace" fill="#001f4d">
-      <tspan id="bootText">dreamboot verified</tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="0.20s" dur="20s" repeatCount="indefinite" />d
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="0.40s" dur="20s" repeatCount="indefinite" />r
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="0.60s" dur="20s" repeatCount="indefinite" />e
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="0.80s" dur="20s" repeatCount="indefinite" />a
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="1.00s" dur="20s" repeatCount="indefinite" />m
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="1.20s" dur="20s" repeatCount="indefinite" />b
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="1.40s" dur="20s" repeatCount="indefinite" />o
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="1.60s" dur="20s" repeatCount="indefinite" />o
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="1.80s" dur="20s" repeatCount="indefinite" />t
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="2.00s" dur="20s" repeatCount="indefinite" /> 
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="2.20s" dur="20s" repeatCount="indefinite" />v
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="2.40s" dur="20s" repeatCount="indefinite" />e
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="2.60s" dur="20s" repeatCount="indefinite" />r
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="2.80s" dur="20s" repeatCount="indefinite" />i
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="3.00s" dur="20s" repeatCount="indefinite" />f
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="3.20s" dur="20s" repeatCount="indefinite" />i
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="3.40s" dur="20s" repeatCount="indefinite" />e
+      </tspan>
+      <tspan opacity="0">
+        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="3.60s" dur="20s" repeatCount="indefinite" />d
+      </tspan>
     </text>
   </svg>
 
@@ -87,5 +140,8 @@
       animate();
     }
   </script>
+<footer style="margin-top: 40px; color: #666; font-size: 0.8rem;">
+  a synth boot dream by <a href="https://www.linkedin.com/in/hoffamania/" style="color: #ff69b4;" target="_blank">@hoffamania</a>
+</footer>
 </body>
 </html>
