--- a/index.html
+++ b/index.html
@@ -36,64 +36,64 @@
 </head>
 <body>
 
-  <svg viewBox="0 0 280 60" xmlns="http://www.w3.org/2000/svg">
-    <text x="40" y="37" font-size="18" font-family="monospace" fill="#001f4d">
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="0.20s" dur="20s" repeatCount="indefinite" />d
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="0.40s" dur="20s" repeatCount="indefinite" />r
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="0.60s" dur="20s" repeatCount="indefinite" />e
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="0.80s" dur="20s" repeatCount="indefinite" />a
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="1.00s" dur="20s" repeatCount="indefinite" />m
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="1.20s" dur="20s" repeatCount="indefinite" />b
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="1.40s" dur="20s" repeatCount="indefinite" />o
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="1.60s" dur="20s" repeatCount="indefinite" />o
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="1.80s" dur="20s" repeatCount="indefinite" />t
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="2.00s" dur="20s" repeatCount="indefinite" /> 
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="2.20s" dur="20s" repeatCount="indefinite" />v
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="2.40s" dur="20s" repeatCount="indefinite" />e
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="2.60s" dur="20s" repeatCount="indefinite" />r
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="2.80s" dur="20s" repeatCount="indefinite" />i
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="3.00s" dur="20s" repeatCount="indefinite" />f
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="3.20s" dur="20s" repeatCount="indefinite" />i
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="3.40s" dur="20s" repeatCount="indefinite" />e
-      </tspan>
-      <tspan opacity="0">
-        <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.1;0.9;1" begin="3.60s" dur="20s" repeatCount="indefinite" />d
-      </tspan>
-    </text>
-  </svg>
+  <svg viewBox="0 0 1200 100" xmlns="http://www.w3.org/2000/svg">
+  <text x="20" y="50" font-size="18" font-family="'Courier New', monospace" fill="#001f4d">
+    <tspan opacity="0"><animate attributeName="opacity" begin="0.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />[</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="0.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="0.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />H</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="0.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />o</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="1.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />f</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="1.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />f</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="1.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />a</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="1.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />h</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="1.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />a</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="2.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="2.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />D</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="2.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />X</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="2.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />7</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="2.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="3.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />C</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="3.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />h</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="3.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />i</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="3.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />l</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="3.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />l</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="4.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="4.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />V</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="4.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />i</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="4.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />b</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="4.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />e</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="5.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="5.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />L</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="5.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />o</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="5.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />a</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="5.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />d</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="6.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />e</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="6.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />r</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="6.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="6.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />C</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="6.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />o</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="7.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />n</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="7.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />t</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="7.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />r</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="7.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />o</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="7.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />l</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="8.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="8.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />P</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="8.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />l</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="8.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />a</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="8.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />n</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="9.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />e</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="9.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="9.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />v</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="9.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />1</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="9.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />.</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="10.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />3</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="10.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />.</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="10.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />2</tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="10.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
+    <tspan opacity="0"><animate attributeName="opacity" begin="10.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />]</tspan>
+  </text>
+</svg>
 
   <audio id="dx7audio" loop>
     <source src="loop1_clean_loopable_slowed_30_percent.mp3" type="audio/mpeg">
