--- a/index.html
+++ b/index.html
@@ -32,68 +32,24 @@
       border-radius: 8px;
       cursor: pointer;
     }
+      .svg-container {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+    }
+
+    @media (max-width: 600px) {
+      .svg-container {
+        padding: 0 10px;
+      }
+    }
   </style>
 </head>
 <body>
 
-  <svg viewBox="0 0 1200 100" xmlns="http://www.w3.org/2000/svg">
-  <text x="20" y="50" font-size="18" font-family="'Courier New', monospace" fill="#001f4d">
-    <tspan opacity="0"><animate attributeName="opacity" begin="0.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />[</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="0.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="0.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />H</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="0.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />o</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="1.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />f</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="1.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />f</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="1.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />a</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="1.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />h</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="1.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />a</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="2.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="2.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />D</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="2.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />X</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="2.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />7</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="2.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="3.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />C</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="3.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />h</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="3.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />i</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="3.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />l</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="3.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />l</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="4.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="4.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />V</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="4.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />i</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="4.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />b</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="4.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />e</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="5.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="5.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />L</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="5.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />o</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="5.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />a</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="5.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />d</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="6.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />e</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="6.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />r</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="6.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="6.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />C</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="6.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />o</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="7.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />n</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="7.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />t</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="7.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />r</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="7.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />o</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="7.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />l</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="8.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="8.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />P</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="8.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />l</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="8.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />a</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="8.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />n</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="9.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />e</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="9.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="9.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />v</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="9.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />1</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="9.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />.</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="10.0s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />3</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="10.2s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />.</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="10.4s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />2</tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="10.6s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" /> </tspan>
-    <tspan opacity="0"><animate attributeName="opacity" begin="10.8s" dur="20s" values="0;1;1;0" keyTimes="0;0.1;0.9;1" repeatCount="indefinite" />]</tspan>
-  </text>
-</svg>
+  <div class="svg-container">
+  <object id="dx7svg" type="image/svg+xml" data="dx7_patch_loader_looped_final.svg" style="width: 100%; max-width: 600px; height: auto;"></object>
+</div>
 
   <audio id="dx7audio" loop>
     <source src="loop1_clean_loopable_slowed_30_percent.mp3" type="audio/mpeg">
@@ -103,7 +59,7 @@
 
   <script>
     const audio = document.getElementById('dx7audio');
-    const svg = document.querySelector('svg');
+    const svg = document.getElementById('dx7svg');
 
     let ctx, analyser, srcNode;
 
